[tool.poetry]
name = "change-aggregation-bulletin"
version = "0.1.0"
description = "Change tracker for production services"
authors = ["SRE"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
pendulum = "^2.1.2"
marshmallow = "^3.20.1"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.7.0"
boto3 = "^1.28.15"
botocore = "^1.31.15"
cfn-lint = "^0.79.5"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
flake8-print = "^5.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"
requests = "^2.31.0"
ruff = "^0.0.280"
safety = "^2.3.5"

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
/(
    \.git
  | \.aws-sam
  | \.history
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
